feat(cosmos.testnet_services): faucet branding

--- a/ansible_collections/cosmos/roles/testnet_services/templates/config.js.j2
+++ b/ansible_collections/cosmos/roles/testnet_services/templates/config.js.j2
@@ -34,9 +34,9 @@ export default {
     path: `${HOME}/history.db`, // save request states
   },
   project: {
-    name: "Binary Builders Testnets Faucet",
-    logo: "https://raw.githubusercontent.com/01builders/binary.builders/refs/heads/main/binary-icon-rounded.png",
-    deployer: `<a href="https://binary.builders/">Binary Builders</a>`,
+    name: "Cosmos-SDK Testnets Faucet",
+    logo: "https://raw.githubusercontent.com/cosmos/cosmos-sdk-docs/refs/heads/main/static/img/logo-bw.svg",
+    deployer: `<a href="https://github.com/cosmos/nightly-stack">Cosmos-SDK</a>`,
   },
   blockchains: [
 {% for chain in testnet_services_testnets %}
