--- a/ansible_collections/validators/roles/observability/templates/cosmos-validator-by-chain.yml.j2
+++ b/ansible_collections/validators/roles/observability/templates/cosmos-validator-by-chain.yml.j2
@@ -1,73 +1,83 @@
 groups:
-  - name: Cosmos Validators - {{ observability_chain_id | replace('-', '_') }}
+  - name: Cosmos Validators - {{ observability_chain_id }}
     rules:
 
     - alert: InstanceDown
-      # Condition for alerting
-      expr: up{job="prometheus.scrape.cosmos_sdk_{{ observability_chain_id | replace('-', '_') }}"} == 0 or up{job="prometheus.scrape.cosmos_validator_watcher_{{ observability_chain_id | replace('-', '_') }}"} == 0
-{% raw %}
+      expr: |
+        absent(up{job="prometheus.scrape.cosmos_sdk_{{ observability_chain_id | replace('-', '_') }}"}) or
+        absent(up{job="prometheus.scrape.cosmos_validator_watcher_{{ observability_chain_id | replace('-', '_') }}"})
       for: 3m
-      # Annotation - additional informational labels to store more information
       annotations:
-        title: 'Instance {{ $labels.instance }} down'
-        description: '{{ $labels.job }} on {{ $labels.instance }} has been down for more than 3 minutes'
-      # Labels - additional labels to be attached to the alert
+        title: "Instance {% raw %}{{ $labels.instance }}{% endraw %} down"
+        description: "{% raw %}{{ $labels.job }} on {{ $labels.instance }}{% endraw %} has been down for more than 3 minutes"
       labels:
-        severity: 'critical'
-        service: cosmos-sdk
-{% endraw %}
+        severity: critical
+        service: validator
+        component: cosmos-sdk
+        grafanaDashboardUrl: "http://{{ hostvars['observability'].ansible_hostname }}.{{ public_domain }}:3000/d/cosmos-validator-watcher/cosmos-validator-watcher-by-chain?var-chain_id={{ observability_chain_id }}"
 
     - alert: TooFewPeers
-      expr: tendermint_p2p_peers{chain_id="{{ observability_chain_id | replace('-', '_') }}"} < 2 or cometbft_p2p_peers{chain_id="{{ observability_chain_id | replace('-', '_') }}"} < 2
-{% raw %}
+      expr: tendermint_p2p_peers{chain_id="{{ observability_chain_id }}"} < 2 or cometbft_p2p_peers{chain_id="{{ observability_chain_id }}"} < 2
       for: 5m
       labels:
-        severity: major
-        service: cosmos-sdk
+        severity: warning
+        service: validator
+        component: cosmos-sdk
       annotations:
-        description: 'P2P Peers on `{{ $labels.instance }}` is lower than threshold (current value: {{ $value }})'
-{% endraw %}
+        description: "{% raw %}P2P Peers for chain `{{ $labels.chain_id }}` validator on `{{ $labels.instance }}` is lower than threshold (current value: {{ $value }}){% endraw %}"
+        grafanaDashboardUrl: http://{{ hostvars['observability'].ansible_hostname }}.{{ public_domain }}:3000/d/cosmos-validator-watcher/cosmos-validator-watcher-by-chain?var-chain_id={{ observability_chain_id }}
 
     - alert: MissingBlocks
-      expr: increase(cosmos_validator_watcher_missed_blocks{chain_id="{{ observability_chain_id | replace('-', '_') }}"}[5m]) > 10
-{% raw %}
+      expr: increase(cosmos_validator_watcher_solo_missed_blocks{chain_id="{{ observability_chain_id }}"}[5m]) > 10
       for: 5m
       labels:
-        severity: major
-        service: cosmos-validator-watcher
+        severity: warning
+        service: validator
+        component: cosmos-validator-watcher
       annotations:
-        description: 'Validator `{{ $labels.moniker }}` is missing `{{ $value }}` blocks!'
-{% endraw %}
+        description: "{% raw %}Chain `{{ $labels.chain_id }}` validator on `{{ $labels.instance }}` is missing `{{ $value }}` blocks!{% endraw %}"
+        grafanaDashboardUrl: http://{{ hostvars['observability'].ansible_hostname }}.{{ public_domain }}:3000/d/cosmos-validator-watcher/cosmos-validator-watcher-by-chain?var-chain_id={{ observability_chain_id }}
+
+    - alert: NoValidatedBlocks
+      expr: rate(cosmos_validator_watcher_validated_blocks{chain_id="{{ observability_chain_id }}"}[5m]) == 0
+      for: 5m
+      labels:
+        severity: warning
+        service: validator
+        component: cosmos-validator-watcher
+      annotations:
+        description: "{% raw %}Chain `{{ $labels.chain_id }}` validator on `{{ $labels.instance }}` does not validate new blocks!{% endraw %}"
+        grafanaDashboardUrl: http://{{ hostvars['observability'].ansible_hostname }}.{{ public_domain }}:3000/d/cosmos-validator-watcher/cosmos-validator-watcher-by-chain?var-chain_id={{ observability_chain_id }}
 
     - alert: DegradedSyncing
-      expr: increase(tendermint_consensus_latest_block_height{chain_id="{{ observability_chain_id | replace('-', '_') }}"}[5m]) < 10 or increase(cometbft_consensus_latest_block_height{chain_id="{{ observability_chain_id | replace('-', '_') }}"}[5m]) < 10
-{% raw %}
+      expr: increase(tendermint_consensus_latest_block_height{chain_id="{{ observability_chain_id }}"}[5m]) < 10 or increase(cometbft_consensus_latest_block_height{chain_id="{{ observability_chain_id }}"}[5m]) < 10
       for: 5m
       labels:
-        severity: major
-        service: cosmos-sdk
+        severity: warning
+        service: validator
+        componnent: cosmos-sdk
       annotations:
-        description: 'Degraded syncing performance - Job {{ $labels.job }} on {{ $labels.instance }}'
-{% endraw %}
+        description: "{% raw %}Degraded syncing performance for Chain `{{ $labels.chain_id }}` validator on `{{ $labels.instance }}`{% endraw %}"
+        grafanaDashboardUrl: http://{{ hostvars['observability'].ansible_hostname }}.{{ public_domain }}:3000/d/cosmos-validator-watcher/cosmos-validator-watcher-by-chain?var-chain_id={{ observability_chain_id }}
 
     - alert: LowInRank
-      expr: cosmos_validator_watcher_rank{chain_id="{{ observability_chain_id | replace('-', '_') }}"} > (count(cosmos_validator_watcher_active_set{chain_id="{{ observability_chain_id | replace('-', '_') }}"} == 1) - 10)
-{% raw %}
+      expr: cosmos_validator_watcher_rank{chain_id="{{ observability_chain_id }}"} > (max(cosmos_validator_watcher_active_set{chain_id="{{ observability_chain_id }}"}) - 10)
       for: 5m
       labels:
-        severity: major
-        service: cosmos-validator-watcher
+        severity: warning
+        service: validator
+        component: cosmos-validator-watcher
       annotations:
-        description: 'Your validator `{{ $labels.moniker }}` rank is `{{ $value }}`!'
+        description: "{% raw %}Chain `{{ $labels.chain_id }}` validator on `{{ $labels.instance }}` rank is `{{ $value }}`!{% endraw %}"
+        grafanaDashboardUrl: http://{{ hostvars['observability'].ansible_hostname }}.{{ public_domain }}:3000/d/cosmos-validator-watcher/cosmos-validator-watcher-by-chain?var-chain_id={{ observability_chain_id }}
 
-{% endraw %}
     - alert: IsJailed
-      expr: cosmos_validator_watcher_is_jailed{chain_id="{{ observability_chain_id | replace('-', '_') }}"} == 1
-{% raw %}
+      expr: cosmos_validator_watcher_is_jailed{chain_id="{{ observability_chain_id }}"} == 1
       for: 5m
       labels:
         severity: critical
-        service: cocosmos-validator-watcher
+        service: validator
+        component: cosmos-validator-watcher
       annotations:
-        description: 'Your validator `{{ $labels.moniker }}` is jailed! `{{ $value }}`!'
-{% endraw %}
+        description: "{% raw %}Chain `{{ $labels.chain_id }}` validator on `{{ $labels.instance }}` is jailed! `{{ $value }}`!{% endraw %}"
+        grafanaDashboardUrl: "http://{{ hostvars['observability'].ansible_hostname }}.{{ public_domain }}:3000/d/cosmos-validator-watcher/cosmos-validator-watcher-by-chain?var-chain_id={{ observability_chain_id }}"
