--- a/ansible_collections/validators/roles/observability/templates/cosmos-validator-generic.yml.j2
+++ b/ansible_collections/validators/roles/observability/templates/cosmos-validator-generic.yml.j2
@@ -8,61 +8,61 @@ groups:
       for: 5m
       labels:
         severity: critical
-        service: node_exporter
+        component: node_exporter
       annotations:
         description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" is read-only.'
 
-    - alert: NodeDiskFull48H
-      expr: predict_linear(node_filesystem_free_bytes{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 48 * 3600) < 0
+    - alert: NodeDiskFull1W
+      expr: predict_linear(node_filesystem_free_bytes{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 7 * 24 * 3600) < 0
       for: 5m
       labels:
-        severity: major
-        service: node_exporter
+        severity: warning
+        component: node_exporter
       annotations:
-        description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" will be out of diskspace within 48 hours.'
+        description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" will be out of diskspace within 1 week.'
 
-    - alert: NodeDiskFull1H
-      expr: predict_linear(node_filesystem_free_bytes{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 3600) < 0
+    - alert: NodeDiskFull2H
+      expr: predict_linear(node_filesystem_free_bytes{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 2 * 3600) < 0
       for: 5m
       labels:
         severity: critical
-        service: node_exporter
+        component: node_exporter
       annotations:
-        description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" will be out of diskspace within 1 hour.'
+        description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" will be out of diskspace within 2 hours.'
 
     - alert: NodeDiskFull
       expr: node_filesystem_avail_bytes/node_filesystem_size_bytes < 0.01
       for: 5m
       labels:
         severity: critical
-        service: node_exporter
+        component: node_exporter
       annotations:
         description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" is out of diskspace (< 1% free).'
 
-    - alert: NodeInodeFull48H
-      expr: predict_linear(node_filesystem_files_free{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 48 * 3600) < 0
+    - alert: NodeInodeFull1W
+      expr: predict_linear(node_filesystem_files_free{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 7 * 24 * 3600) < 0
       for: 5m
       labels:
-        severity: major
-        service: node_exporter
+        severity: warning
+        component: node_exporter
       annotations:
-        description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" will be out of inode numbers within 48 hours.'
+        description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" will be out of inode numbers within 1 week.'
 
-    - alert: NodeInodeFull1H
-      expr: predict_linear(node_filesystem_files_free{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 3600) < 0
+    - alert: NodeInodeFull2H
+      expr: predict_linear(node_filesystem_files_free{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 2 * 3600) < 0
       for: 5m
       labels:
         severity: critical
-        service: node_exporter
+        component: node_exporter
       annotations:
-        description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" will be out of inode numbers within 1 hour.'
+        description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" will be out of inode numbers within 2 hours.'
 
     - alert: NodeInodeFull
       expr: node_filesystem_files_free/node_filesystem_files{instance=~".*validator.*"} < 0.01
       for: 5m
       labels:
         severity: critical
-        service: node_exporter
+        component: node_exporter
       annotations:
         description: 'Filesystem "{{ $labels.mountpoint }}" on "{{ $labels.instance }}" out of inodes (< 1% free).'
 
@@ -70,17 +70,17 @@ groups:
       expr: node_memory_MemAvailable_bytes{instance=~".*validator.*"} / node_memory_MemTotal_bytes * 100 < 10
       for: 2m
       labels:
-        severity: major
-        service: node_exporter
+        severity: warning
+        component: node_exporter
       annotations:
         description: 'Node memory is filling up < 10% left\n  VALUE = {{ $value }}\n LABELS: {{ $labels.instance }}'
 
     - alert: NodeHighCPULoad
-      expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle", instance=~".*validator.*"}[2m])) * 100) > 80
+      expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle", instance=~".*validator.*"}[10m])) * 100) > 80
       for: 0m
       labels:
-        severity: major
-        service: node_exporter
+        severity: warning
+        component: node_exporter
       annotations:
         description: 'CPU load is > 80%\n  VALUE = {{ $value }}\n LABELS: {{ $labels.instance }}'
 
@@ -88,8 +88,8 @@ groups:
       expr: node_timex_sync_status{instance=~".*validator.*"} != 1
       for: 5m
       labels:
-        severity: major
-        service: node_exporter
+        severity: warning
+        component: node_exporter
       annotations:
         description: 'Time on instance "{{ $labels.instance }}" not in sync with NTP.'
 
@@ -97,8 +97,8 @@ groups:
       expr: node_textfile_scrape_error{instance=~".*validator.*",} != 0
       for: 5m
       labels:
-        severity: major
-        service: node_exporter
+        severity: warning
+        component: node_exporter
       annotations:
         description: 'Node-exporter textfile collector scraping error on "{{ $labels.instance }}".'
 {% endraw %}
