feat(validators.chain_celestia): support validator and/or bridge

--- a/ansible_collections/validators/roles/chain_celestia/templates/justfile.j2
+++ b/ansible_collections/validators/roles/chain_celestia/templates/justfile.j2
@@ -11,75 +11,119 @@ default:
     @just --list
 
 # Variables
-validator_service := "celestia-app-{{ chain_celestia_network }}.service"
-bridge_service := "celestia-bridge-{{ chain_celestia_network }}.service"
+{% if chain_celestia_bridge is defined and chain_celestia_bridge | bool %}
+bridge_app_service := "bridge-celestia-app-{{ chain_celestia_network }}"
+bridge_node_service := "bridge-celestia-node-{{ chain_celestia_network }}"
+{% endif %}
+{% if chain_celestia_validator is defined and chain_celestia_validator | bool %}
+validator_app_service := "validator-celestia-app-{{ chain_celestia_network }}"
+{% endif %}
 log_lines := "100"
 
-# Start celestia-app-{{ chain_celestia_network }} systemd service
-start-app:
-    @echo "Starting celestia-app-{{ chain_celestia_network }}..."
-    sudo /usr/bin/systemctl start {% raw %}{{ validator_service }}
+{% if chain_celestia_bridge is defined and chain_celestia_bridge | bool %}
+# Start {% raw %}{{ bridge_app_service }}{% endraw %} systemd service
+start-bridge-app:
+    @echo "Starting {% raw %}{{ bridge_app_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl start {% raw %}{{ bridge_app_service }}.service
 {% endraw %}
     @sleep 2
     @just status-app
 
-# Stop celestia-app-{{ chain_celestia_network }} systemd service
-stop-app:
-    @echo "Stopping celestia-app-{{ chain_celestia_network }}..."
-    sudo /usr/bin/systemctl stop {% raw %}{{ validator_service }}
+# Stop {% raw %}{{ bridge_app_service }}{% endraw %} systemd service
+stop-bridge-app:
+    @echo "Stopping {% raw %}{{ bridge_app_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl stop {% raw %}{{ bridge_app_service }}.service
 {% endraw %}
     @sleep 2
     @just status-app
 
-# Restart celestia-app-{{ chain_celestia_network }} systemd service
-restart-app:
-    @echo "Restarting celestia-app-{{ chain_celestia_network }}..."
-    sudo /usr/bin/systemctl restart {% raw %}{{ validator_service }}
+# Restart {% raw %}{{ bridge_app_service }}{% endraw %} systemd service
+restart-bridge-app:
+    @echo "Restarting {% raw %}{{ bridge_app_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl restart {% raw %}{{ bridge_app_service }}.service
 {% endraw %}
     @sleep 2
     @just status-app
 
-# Check celestia-app-{{ chain_celestia_network }} systemd service status
-status-app:
-    @echo "celestia-app-{{ chain_celestia_network }} status:"
-    sudo /usr/bin/systemctl status {% raw %}{{ validator_service }}
+# Check {% raw %}{{ bridge_app_service }}{% endraw %} systemd service status
+status-bridge-app:
+    @echo "{% raw %}{{ bridge_app_service }}{% endraw %} status:"
+    sudo /usr/bin/systemctl status {% raw %}{{ bridge_app_service }}.service
 {% endraw %}
 
-# Consult celestia-app-{{ chain_celestia_network }} systemd service logs
-logs-app:
-    journalctl --unit={% raw %}{{ validator_service }} --follow
+# Consult {% raw %}{{ bridge_app_service }}{% endraw %} systemd service logs
+logs-bridge-app:
+    journalctl --unit={% raw %}{{ bridge_app_service }} --follow
 {% endraw %}
 
-# Start celestia-bridge-{{ chain_celestia_network }} systemd service
-start-bridge:
-    @echo "Starting celestia-bridge-{{ chain_celestia_network }}..."
-    sudo /usr/bin/systemctl start {% raw %}{{ bridge_service }}
+# Start {% raw %}{{ bridge_node_service }}{% endraw %} systemd service
+start-bridge-node:
+    @echo "Starting {{ chain_celestia_network }}..."
+    sudo /usr/bin/systemctl start {% raw %}{{ bridge_node_service }}.service
 {% endraw %}
     @sleep 2
     @just status-bridge
 
-# Stop celestia-bridge-{{ chain_celestia_network }} systemd service
-stop-bridge:
-    @echo "Stopping celestia-bridge-{{ chain_celestia_network }}..."
-    sudo /usr/bin/systemctl stop {% raw %}{{ bridge_service }}
+# Stop {% raw %}{{ bridge_node_service }}{% endraw %} systemd service
+stop-bridge-node:
+    @echo "Stopping {% raw %}{{ bridge_node_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl stop {% raw %}{{ bridge_node_service }}.service
 {% endraw %}
     @sleep 2
     @just status-bridge
-# Restart celestia-bridge-{{ chain_celestia_network }} systemd service
-restart-bridge:
-    @echo "Restarting celestia-bridge-{{ chain_celestia_network }}..."
-    sudo /usr/bin/systemctl restart {% raw %}{{ bridge_service }}
+# Restart {% raw %}{{ bridge_node_service }}{% endraw %} systemd service
+restart-bridge-node:
+    @echo "Restarting {% raw %}{{ bridge_node_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl restart {% raw %}{{ bridge_node_service }}.service
 {% endraw %}
     @sleep 2
     @just status-bridge
 
-# Check celestia-bridge-{{ chain_celestia_network }} systemd service status
-status-bridge:
-    @echo "celestia-bridge-{{ chain_celestia_network }} status:"
-    sudo /usr/bin/systemctl status {% raw %}{{ bridge_service }}
+# Check {% raw %}{{ bridge_node_service }}{% endraw %} systemd service status
+status-bridge-node:
+    @echo "{% raw %}{{ bridge_node_service }}{% endraw %} status:"
+    sudo /usr/bin/systemctl status {% raw %}{{ bridge_node_service }}.service
 {% endraw %}
 
-# Consult celestia-bridge-{{ chain_celestia_network }} systemd service logs
-logs-bridge:
-    journalctl --unit={% raw %}{{ bridge_service }} --follow
+# Consult {% raw %}{{ bridge_node_service }}{% endraw %} systemd service logs
+logs-bridge-node:
+    journalctl --unit={% raw %}{{ bridge_node_service }} --follow
 {% endraw %}
+{% endif %}
+
+{% if chain_celestia_validator is defined and chain_celestia_validator | bool %}
+# Start {% raw %}{{ validator_app_service }}{% endraw %} systemd service
+start-validator-app:
+    @echo "Starting {% raw %}{{ validator_app_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl start {% raw %}{{ validator_app_service }}.service
+{% endraw %}
+    @sleep 2
+    @just status-app
+
+# Stop {% raw %}{{ validator_app_service }}{% endraw %} systemd service
+stop-validator-app:
+    @echo "Stopping {% raw %}{{ validator_app_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl stop {% raw %}{{ validator_app_service }}.service
+{% endraw %}
+    @sleep 2
+    @just status-app
+
+# Restart {% raw %}{{ validator_app_service }}{% endraw %} systemd service
+restart-validator-app:
+    @echo "Restarting {% raw %}{{ validator_app_service }}{% endraw %}..."
+    sudo /usr/bin/systemctl restart {% raw %}{{ validator_app_service }}.service
+{% endraw %}
+    @sleep 2
+    @just status-app
+
+# Check {% raw %}{{ validator_app_service }}{% endraw %} systemd service status
+status-validator-app:
+    @echo "{% raw %}{{ validator_app_service }}{% endraw %} status:"
+    sudo /usr/bin/systemctl status {% raw %}{{ validator_app_service }}.service
+{% endraw %}
+
+# Consult {% raw %}{{ validator_app_service }}{% endraw %} systemd service logs
+logs-validator-app:
+    journalctl --unit={% raw %}{{ validator_app_service }} --follow
+{% endraw %}
+{% endif %}
