--- a/ansible_collections/validators/roles/observability/templates/global.yml.j2
+++ b/ansible_collections/validators/roles/observability/templates/global.yml.j2
@@ -23,7 +23,7 @@ groups:
 
     - alert: NodeDiskFull12H
       expr: predict_linear(node_filesystem_free_bytes{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 12 * 3600) < 0
-      for: 5m
+      for: 15m
       labels:
         severity: critical
         component: node_exporter
@@ -41,7 +41,7 @@ groups:
 
     - alert: NodeInodeFull1W
       expr: predict_linear(node_filesystem_files_free{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 7 * 24 * 3600) < 0
-      for: 5m
+      for: 1h
       labels:
         severity: warning
         component: node_exporter
@@ -50,7 +50,7 @@ groups:
 
     - alert: NodeInodeFull12H
       expr: predict_linear(node_filesystem_files_free{fstype!~"rootfs|nfs4|tmpfs", instance=~".*validator.*"}[4h], 12 * 3600) < 0
-      for: 5m
+      for: 15m
       labels:
         severity: critical
         component: node_exporter
