--- a/ansible_collections/validators/roles/chain_osmosis/templates/justfile.j2
+++ b/ansible_collections/validators/roles/chain_osmosis/templates/justfile.j2
@@ -11,40 +11,40 @@ default:
     @just --list
 
 # Variables
-validator_service := "{{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }}.service"
+validator_service := "appd-{{ chain_osmosis_chain_id }}.service"
 log_lines := "100"
 
-# Start {{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }} systemd service
+# Start {{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }} systemd service
 start:
-    @echo "Starting {{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }}..."
+    @echo "Starting {{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }}..."
     sudo /usr/bin/systemctl start {% raw %}{{ validator_service }}
 {% endraw %}
     @sleep 2
     @just status
 
-# Stop {{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }} systemd service
+# Stop {{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }} systemd service
 stop:
-    @echo "Stopping {{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }}..."
+    @echo "Stopping {{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }}..."
     sudo /usr/bin/systemctl stop {% raw %}{{ validator_service }}
 {% endraw %}
     @sleep 2
     @just status
 
-# Restart {{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }} systemd service
+# Restart {{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }} systemd service
 restart:
-    @echo "Restarting {{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }}..."
+    @echo "Restarting {{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }}..."
     sudo /usr/bin/systemctl restart {% raw %}{{ validator_service }}
 {% endraw %}
     @sleep 2
     @just status
 
-# Check {{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }} systemd service status
+# Check {{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }} systemd service status
 status:
-    @echo "{{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }} status:"
+    @echo "{{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }} status:"
     sudo /usr/bin/systemctl status {% raw %}{{ validator_service }}
 {% endraw %}
 
-# Consult {{ chain_osmosis_binary_name }}-{{ chain_osmosis_network }} systemd service logs
+# Consult {{ chain_osmosis_appd_name }}-{{ chain_osmosis_chain_id }} systemd service logs
 logs:
     journalctl --unit={% raw %}{{ validator_service }} --follow
 {% endraw %}
